--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,7 @@ nav {
 .navbar-default .navbar-nav>li>a {
   /* color: #2115D1; */
   font-weight: 700;
-  background-image: url(/img/banner.jpg);
+  background-image: url(/img/banner2.jpeg);
   background-size: cover;
   /* background-repeat: no-repeat; */
 }
@@ -360,7 +360,7 @@ nav {
 
 .navbar-inverse {
   /* background: #2115D1; */
-  background-image: url(/img/banner.jpg);
+  background-image: url(/img/banner2.jpeg);
   background-size: cover;
   /* background-repeat: no-repeat; */
 }
