--- a/css/main.css
+++ b/css/main.css
@@ -263,10 +263,10 @@ nav {
 }
 
 .navbar-default .navbar-nav>li>a {
-  /* color: #2115D1; */
+  color: #2115D1; 
   font-weight: 700;
-  background-image: url(/img/banner2.jpeg);
-  background-size: cover;
+  /*background-image: url(/img/banner2.jpeg);
+  /*background-size: cover;
   /* background-repeat: no-repeat; */
 }
 
