--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,7 @@ nav {
 }
 
 .navbar-default .navbar-nav>li>a {
-  color: #2115D1; 
+  color: #022358; 
   font-weight: 700;
   /*background-image: url(/img/banner2.jpeg);
   /*background-size: cover;
@@ -359,7 +359,7 @@ nav {
 } */
 
 .navbar-inverse {
-  background: #2115D1; 
+  background: #022358; 
   /*background-image: url(/img/banner2.jpeg);
   /*background-size: cover;
   /* background-repeat: no-repeat; */
