--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ h4, h5, h6 {
   background-size: 88%;
 }
 #projects .panel-heading.proj-2 {
-  background-image: url(../img/projects/tango1.png);
+  background-image: url(../img/projects/figure4.png);
   background-size: 95%;
 }
 #projects .panel-heading.proj-3 {
