--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ h4, h5, h6 {
 }
 
 #projects .panel-heading.proj-1 {
-  background-image: url(../img/projects/tango1.png);
+  background-image: url(../img/projects/northline_event_velest.png);
   background-size: 88%;
 }
 #projects .panel-heading.proj-2 {
