--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ h4, h5, h6 {
   background-size: 95%;
 }
 #projects .panel-heading.proj-3 {
-  background-image: url(../img/projects/spuna1.png);
+  background-image: url(../img/projects/event_histogram.jpg);
   background-size: cover;
 }
 #projects .panel-heading.proj-4 {
