--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ h4, h5, h6 {
   background-size: cover;
 }
 #projects .panel-heading.proj-4 {
-  background-image: url(../img/projects/himalaya2.jpg);
+  background-image: url(../img/projects/gorkha.png);
 }
 #projects .panel-heading.proj-5 {
   background-image: url(https://unsplash.it/300/200);
